--- a/CSS/main.css
+++ b/CSS/main.css
@@ -140,35 +140,56 @@ section {
 	flex-basis: 70%;
 }
 
-/* Equipment Rules */
+/* Equipment section */
 
+#eqWrapper {
+	width: 100%;
+	padding: 0 20px;
+}
+h4 {
+	position: absolute;
+	color: rgb(0, 0, 214);
+	font-size: 3.5em;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 #bubblesImage {
+	position: relative;
 	margin-top: 50px;
 	width: 100%;
 	height: 750px;
 	background-image: url("../Files/5.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	border-radius: 50%;
 }
 .bubbles {
-	position: relative;
+	position: absolute;
 	width: 250px;
 	height: 250px;
 	background-image: url("../Files/bubble.png");
 	background-size: cover;
 	background-repeat: no-repeat;
 	border-radius: 50%;
-}
-#CO2 {
 	margin-top: 200px;
 	left: 20%;
 }
-h4 {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+#nutrision {
+	margin-top: 50px;
+	left: 45%;
 }
+#nutrision h4 {
+	color: rgb(0, 201, 0);
+}
+#light {
+	margin-top: 200px;
+	left: 65%;
+}
+#light h4 {
+	color: rgb(189, 202, 0);
+}
+
 
 /* Footer Rules */
 
