--- a/CSS/global.css
+++ b/CSS/global.css
@@ -61,14 +61,14 @@ h3 {
 p {
 	text-align: center;
 }
-.mySlides {
-	display: none;
-}
-img {
-	vertical-align: middle;
-	height: 720px;
-}
 #contentWrapper {
 	width: 100%;
 	height: auto;
+}
+section {
+	height: auto;
+	margin-bottom: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
