--- a/CSS/global.css
+++ b/CSS/global.css
@@ -33,12 +33,12 @@ footer {
 	align-items: center;
 	padding: 0px 50px 0;
 }
-a, .footerLinks a li {
+a {
 	text-decoration: none;
 	opacity: 0.75;
 	color: #000000;
 }
-a:hover, .footerLinks a li:hover {
+a:hover {
 	opacity: 1;
 }
 ul,
