--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,4 +1,3 @@
-
 /* General Rules */
 * {
 	margin: 0;
@@ -33,12 +32,14 @@ footer {
 	align-items: center;
 	padding: 0px 50px 0;
 }
-a, .footerLinks a li {
+a,
+.footerLinks a li {
 	text-decoration: none;
 	opacity: 0.75;
 	color: #000000;
 }
-a:hover, .footerLinks a li:hover {
+a:hover,
+.footerLinks a li:hover {
 	opacity: 1;
 }
 ul,
@@ -71,4 +72,11 @@ section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+.articleHeader {
+	padding: 0;
+	height: 750px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
