--- a/CSS/global.css
+++ b/CSS/global.css
@@ -31,6 +31,7 @@ footer {
 	justify-content: space-between;
 	align-items: center;
 	padding: 0px 50px 0;
+	margin-bottom: 50px;
 }
 a,
 .footerLinks a li {
@@ -47,12 +48,14 @@ li {
 	list-style: none;
 }
 h1,
+h2,
 h3 {
 	font-family: "Norican", cursive;
 	font-size: 2em;
 	word-spacing: 0.1em;
 	opacity: 0.75;
 }
+h2,
 h3 {
 	font-size: 5em;
 	letter-spacing: 0.1em;
@@ -61,10 +64,6 @@ h3 {
 }
 p {
 	text-align: center;
-}
-#contentWrapper {
-	width: 100%;
-	height: auto;
 }
 section {
 	height: auto;
