--- a/CSS/global.css
+++ b/CSS/global.css
@@ -5,9 +5,10 @@
 	box-sizing: border-box;
 	font-family: "Source Sans Pro", sans-serif;
 }
-
+body {
+	background-color: #e6e6e6;	
+}
 html {
-	background-color: #e6e6e6;
 	font-size: 16px;
 	line-height: 21px;
 	font-weight: 400;
@@ -31,7 +32,6 @@ footer {
 	justify-content: space-between;
 	align-items: center;
 	padding: 0px 50px 0;
-	margin-bottom: 50px;
 }
 a,
 .footerLinks a li {
