--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,3 @@
-
 #contentWrapper {
 	width: 100%;
 	height: auto;
@@ -8,6 +7,7 @@
 
 header {
 	padding-top: 50px;
+	margin-bottom: 50px;
 	background: linear-gradient(to top, #e6e6e6, white);
 }
 nav a {
@@ -28,6 +28,9 @@ nav a {
 	height: 825px;
 	display: block;
 	padding: 0px;
+}
+#slideShow a {
+	color: white;
 }
 .slideshow-container {
 	position: relative;
@@ -72,9 +75,9 @@ img {
 }
 .fade {
 	-webkit-animation-name: fade;
-	-webkit-animation-duration: 1.5s;
+	-webkit-animation-duration: 3.5s;
 	animation-name: fade;
-	animation-duration: 1.5s;
+	animation-duration: 3.5s;
 }
 @-webkit-keyframes fade {
 	from {
@@ -286,4 +289,3 @@ div, a {
 .grid li:hover {
 	box-shadow: 10px 10px 10px #a6a6a6;
 }
-
