--- a/CSS/main.css
+++ b/CSS/main.css
@@ -99,6 +99,18 @@ img {
 
 /* Introduction section */
 
+.box {
+	display: block;
+}
+.box:hover {
+	width: 200px;
+	height: 200px;
+	-webkit-transition: width 2s, height 2s;
+	-moz-transition: width 2s, height 2s;
+	transition: width 2s, height 2s;			
+}
+
+		
 #introductionWrapper {
 	width: 100%;
 	padding: 0 20px;
